--- a/index.html
+++ b/index.html
@@ -26,18 +26,13 @@
     </header>
   <main class="col-12 col-lg-9 d-flex flex-column">
     <div class="m-5 row justify-content-around">
-      <!-- todo end -->
+      <!-- todo start -->
         <div class="col-12 col-md-6 col-xl-3 mb-3">
           <div class="card">
             <h4 class="card-header bg-dark text-light">
               To Do
             </h4>
-            <ul id="list-toDo" class="list-group list-group-flush"> 
-             <li class="list-group-item">
-               <span class="badge badge-primary badge-pill"></span>
-               <p class="m-1"></p>
-             </li>
-            </ul>  
+            <ul id="list-toDo" class="list-group list-group-flush"></ul>  
          </div>
         </div>
         <!-- todo end -->
@@ -47,12 +42,7 @@
             <h4 class="card-header bg-dark text-light">
               In Progress
             </h4>
-            <ul id="list-inProgress" class="list-group list-group-flush">
-            <li class="list-group-item">
-              <span class="badge badge-primary badge-pill"></span>
-              <p class="m-1"></p>
-            </li>
-            </ul>
+            <ul id="list-inProgress" class="list-group list-group-flush"></ul>
           </div>
         </div>
   <!-- in progress end -->
@@ -62,12 +52,7 @@
             <h4 class="card-header bg-dark text-light">
               In Review
             </h4>
-            <ul id="list-inReview" class="list-group list-group-flush">
-            <li class="list-group-item">
-              <span class="badge badge-primary badge-pill"></span>
-              <p class="m-1"></p>
-            </li>
-            </ul>
+            <ul id="list-inReview" class="list-group list-group-flush"></ul>
           </div>
         </div>
   <!-- in review end -->
@@ -77,12 +62,7 @@
             <h4 class="card-header bg-dark text-light">
               Done
             </h4>
-            <ul id="list-done" class="list-group list-group-flush">
-            <li class="list-group-item">
-              <span class="badge badge-primary badge-pill"></span>
-              <p class="m-1"></p>
-            </li>
-            </ul>
+            <ul id="list-done" class="list-group list-group-flush"></ul>
           </div>
         </div>
   <!-- done end -->
@@ -131,6 +111,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
   <script src="./assets/js/script.js"></script>
 </body>
 
